# django-indexnow

./: .dockerignore  CHANGELOG.md  Dockerfile.release  LICENSE  MANIFEST.in  Makefile  PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
indexnow/: __init__.py  apps.py  client.py  middleware.py  signals.py  urls.py  views.py
indexnow/management/commands/: indexnow_generate_key.py
scripts/: bump_version.py  tag_version.py
tests/: test_client_payload.py  test_key_endpoint.py  test_root_key_middleware.py  test_settings.py  test_signal_submission.py  test_urls.py
