[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-indexnow"
version = "0.1.0"
description = "Minimal Django app for IndexNow URL submission via signals."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "django-indexnow contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "Django>=3.2",
]

[project.urls]
Homepage = "https://github.com/example/django-indexnow"
Repository = "https://github.com/example/django-indexnow"
Issues = "https://github.com/example/django-indexnow/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["indexnow*"]
exclude = ["tests*"]
